manifest/objects/DMMAX__MaxOpportunityPanelCfg__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DMMAX__Classic_Style__c</fullName>
        <label>Classic Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Lightning_Style__c</fullName>
        <label>Lightning Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Mobile_Style__c</fullName>
        <label>Mobile Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Altify Max Opportunity Panel</label>
</CustomObject>